Further stylizes the sidebar to something more akin to the sample

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <svg style="width:40px;height:40px" viewBox="0 0 24 24">
                     <path fill="currentColor" d="M13,3V9H21V3M13,21H21V11H13M3,21H11V15H3M3,13H11V3H3V13Z" />
                 </svg>
-                <h2>Dashboard</h2>
+                <text>Dashboard</text>
             </div>
             <div> </div>
             <div>
@@ -106,7 +106,7 @@
                     </div>
                     <div class="text">
                         <div class="greetings">Hi there,</div>
-                        <div class="username">Great Poogie (@thelegendarypoogie)</div>
+                        <div class="username">Great Poogie (@thepoogie)</div>
                     </div>
                 </div>
                 <div class = "right">
