Begin prototyping of the news and trending widgets

--- a/index.html
+++ b/index.html
@@ -118,7 +118,17 @@
         </div>
         <div class="bot-right">
             <div class="projects"> . </div>
-            <div class="feed"> . </div>
+            <div class="feed"> 
+                <text>Announcements</text>
+                <div class="news">
+                    <div>
+                        <span>Title</span>
+                        Some text
+                    </div>
+                </div>
+                <text>Trending</text>
+                <div class="trending">.</div>
+            </div>
         </div>
 
 
