Finish the prototype of design and introduce color palette
This commit introduces the color palette for the dashboard and
finalizes the basic prototype design of the elements.
More work may be done to better match the flavor of
profile I'm going for.

--- a/index.html
+++ b/index.html
@@ -117,7 +117,27 @@
             </div>
         </div>
         <div class="bot-right">
-            <div class="projects"> . </div>
+            <div class="projects"> 
+                <text>Your Projects</text>
+                <div class="card">
+                    .
+                </div>
+                <div class="card">
+                    .
+                </div>
+                <div class="card">
+                    .
+                </div>
+                <div class="card">
+                    .
+                </div>
+                <div class="card">
+                    .
+                </div>
+                <div class="card">
+                    .
+                </div>
+            </div>
             <div class="feed"> 
                 <text>Announcements</text>
                 <div class="news">
