Populate news feed with nonsense stories

--- a/index.html
+++ b/index.html
@@ -226,9 +226,17 @@
             <div class="feed"> 
                 <text>Announcements</text>
                 <div class="news">
-                    <div>
+                    <div class="article">
                         <span>Title</span>
-                        Some text
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    </div>
+                    <div class="article">
+                        <span>Title</span>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    </div>
+                    <div class="article">
+                        <span>Title</span>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                     </div>
                 </div>
                 <text>Trending</text>
